@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2023-11-04T08:20:03Z",
+  "timestamp" : "2023-11-04T16:21:08Z",
   "count_outdated" : 586,
   "uniques_outdated" : 277,
-  "count" : 621,
+  "count" : 622,
   "uniques" : 293,
   "clones" : [
     {
@@ -133,9 +133,9 @@
     },
     {
       "timestamp": "2023-11-04T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
